# enum-bitset

./: Cargo.toml  Changelog.md  LICENSE  README.md  rustfmt.toml
.github/workflows/: test.yml
enum-bitset-derive/: Cargo.toml  README.md
enum-bitset-derive/src/: derive.rs  lib.rs
enum-bitset-derive/src/derive/: base_impl.rs  config.rs  core_traits.rs  doc.rs  inherent.rs  iter.rs  mask.rs  ops.rs  serde.rs
enum-bitset-derive/src/derive/config/: vis.rs
src/: debug_impl.rs  example.rs  lib.rs
tests/: alphabet.rs  no_debug.rs  repr.rs  serde_3_variants.rs  serde_config.rs  set_methods.rs  set_ops.rs  two_variants.rs
